added bucket url response
