# main.py
@@ -2,10 +2,12 @@ from flask import Flask, request, render_template, send_from_directory, jsonify
 from flask_cors import CORS
 from plot_spider_graph import plot_spider_graph
 from plot_bar_graph import generate_bar_graph
+from bucket_operations import upload_to_bucket
 import tempfile
 import os
 import yaml
 import base64
+
 app = Flask(__name__)
 PORT = os.environ.get("PORT", 8080)
 CORS(app, origins=[f"https://graphconstructor.com/","https://graphgenerator-chatgptplugin-geearsjixq-uc.a.run.app:{PORT}", "http://localhost:{PORT}", "https://chat.openai.com"])
@@ -19,9 +21,17 @@ def spider_plot():
     # Parse the JSON data from the request
     data = request.get_json()
     categories = data['categories']
-    values = data['values']
-    legend = data['legend']
-    max_value = data.get('max_value', None)   
+    data_sets = data['data_sets'] # Replace 'values' with 'data_sets', which is an array of dicts
+    max_value = data.get('max_value', None)
+    response_type = data.get('response_type', 'bucketurl') # New optional parameter 'response_type'
+
+    # Assemble values and legend into separate lists
+    values = []
+    legend = []
+    for data_set in data_sets:
+        values.append(data_set['values'])
+        legend.append(data_set['legend'])
+
     spiderfilename = file_path
 
     try:
@@ -29,14 +39,22 @@ def spider_plot():
     except:
         return "bad spider plot", 400
 
-    with open(spiderfilename, 'rb') as image_file:
-        image_data = image_file.read()
-        base64_image = base64.b64encode(image_data).decode('utf-8')
-
-    response_data = {
-        'image': base64_image
-    }
-
+    if response_type == 'bucketurl':
+        # Here you would upload the file to a storage bucket and get its URL.
+        # Assuming upload_to_bucket() is a function that handles uploading the image to your storage bucket
+        # and returns the URL of the uploaded image.
+        bucket_url = upload_to_bucket(spiderfilename,spiderfilename)
+        response_data = {
+            'image': bucket_url
+        }
+    else:
+        with open(spiderfilename, 'rb') as image_file:
+            image_data = image_file.read()
+            base64_image = base64.b64encode(image_data).decode('utf-8')
+            response_data = {
+                'image': base64_image
+            }
+    
     return response_data
 
 @app.route('/bar_graph', methods=['POST'])
@@ -49,25 +67,34 @@ def bar_graph():
     data = request.get_json()
     categories = data['categories']
     values = data['values']
-
     title = data['title'][0]
     xlabel = data['xlabel'][0]
     ylabel = data['ylabel'][0]
+    response_type = data.get('response_type', 'bucketurl')  # New optional parameter 'response_type'
 
     try:
         generate_bar_graph(categories, values, title, xlabel, ylabel, file_path)
     except:
         return "bad bar graph", 400
 
-    with open(file_path, 'rb') as image_file:
-        image_data = image_file.read()
-        base64_image = base64.b64encode(image_data).decode('utf-8')
-
-    response_data = {
-        'image': base64_image
-    }
+    if response_type == 'bucketurl':
+        # Here you would upload the file to a storage bucket and get its URL.
+        # Assuming upload_to_bucket() is a function that handles uploading the image to your storage bucket
+        # and returns the URL of the uploaded image.
+        bucket_url = upload_to_bucket(file_path,file_path)
+        response_data = {
+            'image': bucket_url
+        }
+    else:
+        with open(file_path, 'rb') as image_file:
+            image_data = image_file.read()
+            base64_image = base64.b64encode(image_data).decode('utf-8')
+            response_data = {
+                'image': base64_image
+            }
 
     return response_data
+
 
 @app.route("/")
 def main_page():
